[gd_scene load_steps=3 format=3 uid="uid://c2168jfwglav0"]

[ext_resource type="Script" uid="uid://0k43jst6mnuc" path="res://client/client.gd" id="1_vu05s"]
[ext_resource type="Script" uid="uid://d3r1hw7tg04do" path="res://addons/nodewebsockets/websocket_client.gd" id="1_xyq8r"]

[node name="Client" type="Node2D"]
script = ExtResource("1_vu05s")

[node name="WebSocketClient" type="Node" parent="."]
script = ExtResource("1_xyq8r")
protocols = PackedStringArray("proto")
metadata/_custom_type_script = "uid://d3r1hw7tg04do"

[node name="Line2D" type="Line2D" parent="."]
modulate = Color(1, 0, 0, 1)
points = PackedVector2Array(500, 0, 500, 800)
width = 2.0

[connection signal="connection_established" from="WebSocketClient" to="." method="_on_web_socket_client_connection_established"]
[connection signal="text_received" from="WebSocketClient" to="." method="_on_web_socket_client_text_received"]
